<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.ShowItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_arrow"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/back_arrow"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_lock"
        android:layout_gravity="top"
        app:contentPadding="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="66dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/item_image"
                android:src="@drawable/add_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/seller"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="@string/item_being_sold_by"/>


    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/shop_item_name1"/>

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center | bottom"
        android:textSize="20sp"
        android:layout_marginBottom="170dp"
        android:text="@string/shop_item_description"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center | bottom"
        android:layout_marginBottom="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/price2"/>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom | left"
        android:layout_marginBottom="30dp"
        android:text="@string/buy"/>




</FrameLayout>