<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.PaymentActivity">

    <LinearLayout
        android:id="@+id/back_area"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/fab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_arrow"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/back_arrow"/>

    </LinearLayout>

    <TextView
        android:visibility="visible"
        android:id="@+id/payment_info_blip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:text="@string/enter_your_payment_information"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ime"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/payment_info_blip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:visibility="visible"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:hint="@string/card_holder_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adresa"
        app:layout_constraintTop_toBottomOf="@id/ime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:visibility="visible"
            android:layout_width="match_parent"
            android:inputType="textPostalAddress"
            android:layout_height="wrap_content"
            android:hint="@string/cardholder_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brojkartice"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/adresa"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="240dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="240dp"
            android:inputType="numberSigned"
            android:maxLength="16"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:layout_marginEnd="100dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvcbroj"
        app:layout_constraintTop_toBottomOf="@id/adresa"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="110dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:visibility="visible"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:hint="@string/cvc" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cc_date"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/cvcbroj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_date" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/purchaseBtn"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cc_date"
        android:layout_marginTop="80dp"
        android:text="@string/purchase"/>

    <ImageView
        android:id="@+id/completedTransaction"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_area"
        android:layout_marginTop="90dp"
        android:src="@drawable/baseline_check_circle_outline_24"
        app:tint="@color/materialPlavaFix" />

    <TextView
        android:id="@+id/completedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/completedTransaction"
        android:text="@string/purchase_completed"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>