<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <LinearLayout
        android:id="@+id/back_area"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/fab"
            android:src="@drawable/back_arrow"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/back_arrow"/>

    </LinearLayout>

<androidx.cardview.widget.CardView
    android:id="@+id/card_lock"
    app:layout_constraintTop_toBottomOf="@id/back_area"
    app:contentPadding="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_marginTop="15dp"
    android:layout_marginHorizontal="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:src="@drawable/add_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/add_an_item_for_sale"
            app:layout_constraintTop_toBottomOf="@id/card_lock"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:hint="@string/item_title"
            app:layout_constraintTop_toBottomOf="@id/title_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/itemName"
        android:hint="@string/item_description"
        />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/itemPrice"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        app:layout_constraintTop_toBottomOf="@id/itemDescription"
        />



    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemPrice"
        android:text="@string/add"/>


</androidx.constraintlayout.widget.ConstraintLayout>
